--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
   </head>
   <body class="loginBody dark-mode">
     <a href="landing.html"><img src="./images/logo.png" alt="Logo" /></a>
-    <h1 class="title">Skill Sync</h1>
+    <h1 class="title"><a href="main.html">Skill Sync</a></h1>
     <main class="form-container">
       <h2>Login</h2>
       <form action="login" method="POST">
@@ -31,11 +31,10 @@
     </main>
 
     <footer>
-      <i class="fa-solid fa-expand" onclick="resetScale()" title="Reset Zoom" style="margin-left: 15px; cursor: pointer; display: none"></i>
       <i class="fa-regular fa-lightbulb" onclick="toggleDarkMode()" title="Toggle Dark Mode"></i>
     </footer>
 
-    <script src="./js/footer.js"></script>
+    <script src="./js/icon.js" defer></script>
     <script src="./js/login.js"></script>
   </body>
 </html>
