--- a/html/profile.html
+++ b/html/profile.html
@@ -3,137 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Page</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="css/stylesheet.css" />
     <script src="https://kit.fontawesome.com/b593ca79be.js" crossorigin="anonymous"></script>
-    <style>
-      main {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
-      }
-
-      .profile-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 40px;
-      }
-
-      .profile-header h1 {
-        font-size: 48px;
-        font-weight: 700;
-        width: 70%;
-      }
-
-      .main-section {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 60px;
-      }
-
-      .main-section > div {
-        padding: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
-        border-radius: 10px;
-      }
-
-      .main-section > div:hover {
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
-      }
-
-      .overview {
-        width: 60%;
-      }
-
-      .contact {
-        width: 30%;
-      }
-
-      .overview h2,
-      .contact h2 {
-        font-size: 24px;
-        margin-bottom: 20px;
-      }
-
-      .overview p {
-        font-size: 16px;
-        line-height: 1.5;
-      }
-
-      .contact p {
-        font-size: 16px;
-        margin-bottom: 10px;
-      }
-
-      .cards-section {
-        display: flex;
-      }
-
-      .card {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
-        border-radius: 12px;
-        width: 30%;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        transition: box-shadow 0.3s ease;
-        margin: 10px;
-      }
-
-      .card:hover {
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
-      }
-
-      .card h3 {
-        font-size: 20px;
-        margin-bottom: 10px;
-      }
-
-      .card p {
-        font-size: 14px;
-        margin-bottom: 20px;
-      }
-
-      button {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
-      }
-
-      button:hover {
-        background-color: var(--midGrey);
-      }
-
-      .profile-container {
-        padding: 40px 80px;
-      }
-
-      .profile-img {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        border: 3px solid var(--black);
-        padding: 5px;
-        object-fit: cover;
-      }
-    </style>
   </head>
 
   <body class="dark-mode">
     <header>
       <a href="landing.html"><img src="./images/logo.png" alt="Logo" /></a>
-      <a href="profile.html" class="user-icon"><i class="fa-solid fa-user"></i></a>
+      <a href="profile.html" class="user-icon"> <img class="profile-img icon" src="./images/default user.png" alt="profile picture" /> </a>
       <div class="dropdown">
         <i class="fa-solid fa-bars" onclick="toggleDropdown()"></i>
         <div class="dropdown-content" id="dropdownMenu">
-          <a href="#">Account</a>
+          <a href="account.html">Account</a>
           <a href="main.html">Skill Tree</a>
-          <a href="#">Skill List</a>
+          <!-- <a href="#">Skill List</a> -->
           <a href="login.html">Sign Out</a>
         </div>
       </div>
@@ -142,7 +26,7 @@
     <main>
       <div class="profile-container">
         <!-- Header Section -->
-        <div class="profile-header">
+        <div class="profile-section">
           <h1>First Last</h1>
           <img class="profile-img" src="./images/default user.png" alt="profile picture" />
         </div>
@@ -193,7 +77,6 @@
       <i class="fa-regular fa-lightbulb" onclick="toggleDarkMode()" title="Toggle Dark Mode"></i>
     </footer>
 
-    <script src="./js/header.js" defer></script>
-    <script src="./js/footer.js" defer></script>
+    <script src="./js/icon.js" defer></script>
   </body>
 </html>
