--- a/html/main.html
+++ b/html/main.html
@@ -27,7 +27,7 @@
         <h2>Questionnaire</h2>
         <form action="login" method="POST">
           <div class="form-group">
-            <label for="answer">What is your future career?</label>
+            <label for="answer">What is your future career goal?</label>
             <input type="text" id="answer" name="answer" placeholder="Software Engineer" required />
           </div>
           <button class="F2-button" onclick="close()">Next</button>
@@ -109,7 +109,7 @@
         <div class="tab-container">
           <button class="tab" onclick="showTab('description')">Description</button>
           <button class="tab" onclick="showTab('relatedSkills')">Related Skills</button>
-          <button class="tab" onclick="showTab('ai')">AI</button>
+          <!-- <button class="tab" onclick="showTab('ai')">AI</button> -->
         </div>
         <div class="tab-content" id="descriptionTab">
           <h3 id="infoTitle">Node Title</h3>
