--- a/html/account.html
+++ b/html/account.html
@@ -9,13 +9,13 @@
   </head>
   <body class="dark-mode">
     <header>
-      <a href="landing.html"><img src="./images/logo.png" alt="Logo" /></a>
+      <a href="dashboard.html"><img src="./images/logo.png" alt="Logo" /></a>
       <a href="profile.html" class="user-icon"> <img class="profile-img icon" src="./images/default user.png" alt="profile picture" /> </a>
       <div class="dropdown">
         <i class="fa-solid fa-bars" onclick="toggleDropdown()"></i>
         <div class="dropdown-content" id="dropdownMenu">
           <a href="account.html">Account</a>
-          <a href="main.html">Skill Tree</a>
+          <a href="dashboard.html">Skill Tree</a>
           <!-- <a href="#">Skill List</a> -->
           <a href="login.html">Sign Out</a>
         </div>
@@ -25,7 +25,7 @@
     <main class="account-page">
       <div class="sidebar">
         <button class="tablinks selected">Overview</button>
-        <button class="tablinks">Settings</button>
+        <button class="tablinks">Edit Account</button>
         <button class="tablinks">Notifications</button>
         <button class="tablinks">Sign Out</button>
       </div>
@@ -36,7 +36,7 @@
           <p>Welcome to your account page. Here is a summary of your activities.</p>
         </div>
 
-        <div id="Settings" class="tabcontent">
+        <div id="Edit Account" class="tabcontent">
           <h2>Settings</h2>
           <form class="settings-form">
             <!-- Username -->
