--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
   </head>
   <body class="loginBody dark-mode">
     <a href="landing.html"><img src="./images/logo.png" alt="Logo" /></a>
-    <h1 class="title"><a href="main.html">Skill Sync</a></h1>
+    <h1 class="title"><a href="dashboard.html">Skill Sync</a></h1>
     <main class="form-container">
       <h2>Login</h2>
       <form action="login" method="POST">
@@ -21,9 +21,19 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" placeholder="password" required />
         </div>
-        <div class="form-group" id="regInput" style="display: none">
-          <label for="confirmPassword">Confirm Password</label>
-          <input type="password" id="confirmPassword" name="confirmPassword" placeholder="password" />
+        <div id="regInput" style="display: none">
+          <div class="form-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="password" />
+          </div>
+          <div class="form-group">
+            <label for="profilePicture">Profile Picture (Optional)</label>
+            <input type="file" id="profilePicture" name="profilePicture" accept="image/*" />
+          </div>
+          <div class="form-group">
+            <label for="bio">Bio (Optional)</label>
+            <textarea id="bio" name="bio" rows="4" placeholder="Tell us about yourself..."></textarea>
+          </div>
         </div>
         <button type="submit" class="F1-button">Login</button>
         <button type="button" class="F2-button">Register</button>
